# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-actions-demo.yml
brain_games/: cli.py  common.py  games_engine.py  games_logic.py
brain_games/game_engine/: games_logic.py  player_interaction.py
brain_games/games/: calc.py  calc_game.py  even.py  even_game.py  games_logic.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
