[tool.poetry]
name = "hexlet-code"
version = "0.4.0"
description = "Games for improving mathematical skills"
authors = ["Pejnikov"]
repository = "https://github.com/Pejnikov/python-project-lvl1"
classifiers = [
    "License :: Free For Educational Use",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7"
]
packages = [
   { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"